
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CAgsalML"  # Change this to your package's name
version = "0.1.0"
description = "A package for standardized ML and causal inference pipelines."
readme = "README.md"
authors = [
    { name = "Diego Quintero", email = "diego.quinteropuentes@wur.nl" },
]
license = { file = "LICENSE" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",  # Update if you use a different license
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Causal Inference",
    "Topic :: Scientific/Engineering :: Agriculture"
]
keywords = ["machine learning", "causal inference", "pipeline", "sklearn", "agriculture"]

dependencies = [
    "scikit-learn >= 1.3.0",
    "pandas >= 2.0.0",
    "numpy >= 1.21.0",
    "scikit-gstat "
]

[project.optional-dependencies]
#pytorch = [
#    "torch",
#]
causal = [
    "dowhy",
    "econml",
    "balance",
]
plot = [
    "matplotlib",
    "seaborn",
    "geopandas" 
]

dev = [
    "CAgsalML[causal,plot]",  # Install all optional dependencies
    "pytest",            # For running tests
    "ruff",              # High-performance linter
    "build",             # For building the package
    "twine"              # For uploading to PyPI
]

[project.urls]
"Homepage" = "https://github.com/your_username/my_ml_package"
"Bug Tracker" = "https://github.com/your_username/my_ml_package/issues"

# --- Tool Configuration (Good Practice) ---

[tool.black]
# Configuration for the Black code formatter
line-length = 88
target-version = ['py310']

[tool.ruff]
# Configuration for the Ruff linter
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # Handled by black (line length)

[tool.ruff.isort]
known-first-party = ["CAgsalML"]